xcgui.h


/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄
struct POINTF
{
	float x;
	float y;
};

XC_API HRGN WINAPI XDraw_CreatePolygonRgn(HDRAW hDraw, POINT *pPt, int cPoints, int fnPolyFillMode);

XC_API int WINAPI XDraw_SelectClipRgn(HDRAW hDraw, HRGN hRgn);

XC_API void WINAPI XDraw_FillRect(HDRAW hDraw, RECT *pRect);

XC_API void WINAPI XDraw_FillRectColor(HDRAW hDraw, RECT *pRect, COLORREF color, BYTE alpha = 255);

XC_API BOOL WINAPI XDraw_FillRgn(HDRAW hDraw, HRGN hrgn, HBRUSH hbr);

XC_API void WINAPI XDraw_FillEllipse(HDRAW hDraw, RECT *pRect);

XC_API void WINAPI XDraw_DrawEllipse(HDRAW hDraw, RECT *pRect);

XC_API void WINAPI XDraw_FillRoundRect(HDRAW hDraw, RECT *pRect, int nWidth, int nHeight); //填充圆角矩形
XC_API void WINAPI XDraw_DrawRoundRect(HDRAW hDraw, RECT *pRect, int nWidth, int nHeight); //绘制圆角矩形边框
XC_API void WINAPI XDraw_FillRoundRectEx(HDRAW hDraw, RECT *pRect, int nLeftTop, int nRightTop, int nRightBottom, int nLeftBottom); //填充圆角矩形
XC_API void WINAPI XDraw_DrawRoundRectEx(HDRAW hDraw, RECT *pRect, int nLeftTop, int nRightTop, int nRightBottom, int nLeftBottom); //绘制圆角矩形边框
XC_API BOOL WINAPI XDraw_Rectangle(HDRAW hDraw, int nLeftRect, int nTopRect, int nRightRect, int nBottomRect);

XC_API void WINAPI XDraw_DrawGroupBox_Rect(HDRAW hDraw, RECT *pRect, const wchar_t* pName, COLORREF textColor, BYTE textAlpha, POINT* pOffset);

XC_API void WINAPI XDraw_DrawGroupBox_RoundRect(HDRAW hDraw, RECT *pRect, const wchar_t* pName, COLORREF textColor, BYTE textAlpha, POINT* pOffset, int nWidth, int nHeight);

XC_API void WINAPI XDraw_GradientFill2(HDRAW hDraw, COLORREF color1, BYTE alpha1, COLORREF color2, BYTE alpha2, RECT *pRect, int mode);

XC_API BOOL WINAPI XDraw_GradientFill4(HDRAW hDraw, COLORREF color1, COLORREF color2, COLORREF color3, COLORREF color4, RECT *pRect, int mode);

XC_API BOOL WINAPI XDraw_FrameRgn(HDRAW hDraw, HRGN hrgn, HBRUSH hbr, int nWidth, int nHeight);

XC_API void  WINAPI XDraw_FrameRect(HDRAW hDraw, RECT *pRect);

XC_API void WINAPI XDraw_FocusRect(HDRAW hDraw, RECT *pRect);

XC_API void WINAPI XDraw_DrawLine(HDRAW hDraw, int x1, int y1, int x2, int y2);

XC_API BOOL WINAPI XDraw_MoveToEx(HDRAW hDraw, int X, int Y, LPPOINT lpPoint = NULL);

XC_API BOOL WINAPI XDraw_LineTo(HDRAW hDraw, int nXEnd, int nYEnd);

XC_API BOOL WINAPI XDraw_Polyline(HDRAW hDraw, in_ POINT *pArrayPt, int arrayPtSize);

XC_API void WINAPI XDraw_Dottedline(HDRAW hDraw, int x1, int y1, int x2, int y2);  //绘制虚线
XC_API COLORREF WINAPI XDraw_SetPixel(HDRAW hDraw, int X, int Y, COLORREF crColor);

XC_API void WINAPI XDraw_Check(HDRAW hDraw, int x, int y, COLORREF color, BOOL bCheck);

XC_API BOOL WINAPI XDraw_DrawIconEx(HDRAW hDraw, int xLeft, int yTop, HICON hIcon, int cxWidth, int cyWidth, UINT istepIfAniCur, HBRUSH hbrFlickerFreeDraw, UINT diFlags);

XC_API BOOL WINAPI XDraw_BitBlt(HDRAW hDrawDest, int nXDest, int nYDest, int nWidth, int nHeight, HDC hdcSrc, int nXSrc, int nYSrc, DWORD dwRop);

XC_API BOOL WINAPI XDraw_BitBlt2(HDRAW hDrawDest, int nXDest, int nYDest, int nWidth, int nHeight, HDRAW hDrawSrc, int nXSrc, int nYSrc, DWORD dwRop);

XC_API BOOL WINAPI XDraw_AlphaBlend(HDRAW hDraw, int nXOriginDest, int nYOriginDest, int nWidthDest, int nHeightDest, HDC hdcSrc, int nXOriginSrc, int nYOriginSrc, int nWidthSrc, int nHeightSrc, int alpha);

XC_API void WINAPI XDraw_TriangularArrow(HDRAW hDraw, int align, int x, int y, int width, int height);

XC_API void WINAPI XDraw_DrawPolygon(HDRAW hDraw, in_ POINT *points, int nCount);

XC_API void WINAPI XDraw_DrawPolygonF(HDRAW hDraw, in_ POINTF *points, int nCount);

XC_API void WINAPI XDraw_FillPolygon(HDRAW hDraw, in_ POINT *points, int nCount);

XC_API void WINAPI XDraw_FillPolygonF(HDRAW hDraw, in_ POINTF *points, int nCount);

XC_API void WINAPI XDraw_Image(HDRAW hDraw, HIMAGE hImageFrame, int x, int y);

XC_API void WINAPI XDraw_Image2(HDRAW hDraw, HIMAGE hImageFrame, int x, int y, int width, int height);

XC_API void WINAPI XDraw_ImageStretch(HDRAW hDraw, HIMAGE hImageFrame, int x, int y, int width, int height);

XC_API void WINAPI XDraw_ImageAdaptive(HDRAW hDraw, HIMAGE hImageFrame, RECT *pRect, BOOL bOnlyBorder = FALSE);

XC_API void WINAPI XDraw_ImageExTile(HDRAW hDraw, HIMAGE hImageFrame, RECT *pRect, int flag = 0);

XC_API void WINAPI XDraw_ImageSuper(HDRAW hDraw, HIMAGE hImageFrame, RECT *pRect, BOOL bClip = FALSE);

XC_API void WINAPI XDraw_ImageSuper2(HDRAW hDraw, HIMAGE hImageFrame, RECT *pRcDest, RECT *pSrcRect);

XC_API void WINAPI XDraw_ImageSuperMask(HDRAW hDraw, HIMAGE hImageFrame, HIMAGE hImageFrameMask, RECT *pRect, RECT *pRectMask, BOOL bClip = FALSE);

XC_API void WINAPI XDraw_ImageMask(HDRAW hDraw, HIMAGE hImageFrame, HIMAGE hImageFrameMask, int x, int y, int x2, int y2);

XC_API void WINAPI XDraw_DrawText(HDRAW hDraw, const wchar_t * lpString, int nCount, RECT* lpRect);

XC_API void WINAPI XDraw_DrawTextUnderline(HDRAW hDraw, const wchar_t * lpString, int nCount, RECT* lpRect, COLORREF colorLine, BYTE alphaLine = 255);

XC_API void WINAPI XDraw_TextOut(HDRAW hDraw, int nXStart, int nYStart, const wchar_t * lpString, int cbString);

XC_API void WINAPI XDraw_TextOutEx(HDRAW hDraw, int nXStart, int nYStart, const wchar_t * lpString);

XC_API void WINAPI XDraw_TextOutA(HDRAW hDraw, int nXStart, int nYStart, const char * lpString);

XC_API void WINAPI XDraw_SetAlpha(HDRAW hDraw, BYTE alpha);  //设置透明通道度
XC_API void WINAPI XDraw_SetAlphaEx(HDC hdc, BYTE alpha);  //设置透明通道度
XC_API HELE WINAPI XEditor_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API BOOL WINAPI XEditor_SetBreakpoint(HELE hEle, int iPosition, BOOL bActivate = TRUE);       //添加断点
XC_API BOOL WINAPI XEditor_RemoveBreakpoint(HELE hEle, int iPosition);    //添加断点
XC_API void WINAPI XEditor_ClearBreakpoint(HELE hEle);

XC_API BOOL WINAPI XEditor_SetActivateBreakpoint(HELE hEle, int iPosition, BOOL bActivate);    //设置当前命中行
XC_API BOOL WINAPI XEditor_SetRunRow(HELE hEle, int iPosition);

XC_API int  WINAPI XEditor_GetBreakpointCount(HELE hEle);

XC_API int  WINAPI XEditor_GetBreakpoints(HELE hEle, out_ int* aPoints, int nCount);

XC_API HELE WINAPI XEdit_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API void WINAPI XEdit_SetText(HELE hEle, const wchar_t* pString);

XC_API int  WINAPI XEdit_GetText(HELE hEle, wchar_t* pOut, int nOutlen);

XC_API int  WINAPI XEdit_GetTextLength(HELE hEle);

XC_API void WINAPI XEdit_SetCaretColor(HELE hEle, COLORREF  color);

XC_API void WINAPI XEdit_SetSelectBkColor(HELE hEle, COLORREF color, BYTE alpha = 255);

XC_API void WINAPI XEdit_AddKeyword(HELE hEle, const wchar_t* pKeyword, COLORREF color);

XC_API BOOL WINAPI XEdit_ClipboardPaste(HELE hEle);    //粘贴 粘贴剪贴板内容