xcgui.nim


proc XDraw_CreatePolygonRgn*(hDraw: HDRAW; pPt: ptr POINT; cPoints: cint;
                            fnPolyFillMode: cint): HRGN {.cdecl,
    importc: "XDraw_CreatePolygonRgn", dynlib: xcgui, discardable.}

proc XDraw_SelectClipRgn*(hDraw: HDRAW; hRgn: HRGN): cint {.cdecl,
    importc: "XDraw_SelectClipRgn", dynlib: xcgui, discardable.}

proc XDraw_FillRect*(hDraw: HDRAW; pRect: ptr RECT) {.cdecl, importc: "XDraw_FillRect",
    dynlib: xcgui, discardable.}

proc XDraw_FillRectColor*(hDraw: HDRAW; pRect: ptr RECT; color: COLORREF;
                         alpha: BYTE = 255) {.cdecl, importc: "XDraw_FillRectColor",
    dynlib: xcgui, discardable.}

proc XDraw_FillRgn*(hDraw: HDRAW; hrgn: HRGN; hbr: HBRUSH): BOOL {.cdecl,
    importc: "XDraw_FillRgn", dynlib: xcgui, discardable.}

proc XDraw_FillEllipse*(hDraw: HDRAW; pRect: ptr RECT) {.cdecl,
    importc: "XDraw_FillEllipse", dynlib: xcgui, discardable.}

proc XDraw_DrawEllipse*(hDraw: HDRAW; pRect: ptr RECT) {.cdecl,
    importc: "XDraw_DrawEllipse", dynlib: xcgui, discardable.}

proc XDraw_FillRoundRect*(hDraw: HDRAW; pRect: ptr RECT; nWidth: cint; nHeight: cint) {.
    cdecl, importc: "XDraw_FillRoundRect", dynlib: xcgui, discardable.}
## 填充圆角矩形


proc XDraw_DrawRoundRect*(hDraw: HDRAW; pRect: ptr RECT; nWidth: cint; nHeight: cint) {.
    cdecl, importc: "XDraw_DrawRoundRect", dynlib: xcgui, discardable.}
## 绘制圆角矩形边框


proc XDraw_FillRoundRectEx*(hDraw: HDRAW; pRect: ptr RECT; nLeftTop: cint;
                           nRightTop: cint; nRightBottom: cint; nLeftBottom: cint) {.
    cdecl, importc: "XDraw_FillRoundRectEx", dynlib: xcgui, discardable.}
## 填充圆角矩形


proc XDraw_DrawRoundRectEx*(hDraw: HDRAW; pRect: ptr RECT; nLeftTop: cint;
                           nRightTop: cint; nRightBottom: cint; nLeftBottom: cint) {.
    cdecl, importc: "XDraw_DrawRoundRectEx", dynlib: xcgui, discardable.}
## 绘制圆角矩形边框


proc XDraw_Rectangle*(hDraw: HDRAW; nLeftRect: cint; nTopRect: cint; nRightRect: cint;
                     nBottomRect: cint): BOOL {.cdecl, importc: "XDraw_Rectangle",
    dynlib: xcgui, discardable.}

proc XDraw_DrawGroupBox_Rect*(hDraw: HDRAW; pRect: ptr RECT; pName: ptr WCHAR;
                             textColor: COLORREF; textAlpha: BYTE;
                             pOffset: ptr POINT) {.cdecl,
    importc: "XDraw_DrawGroupBox_Rect", dynlib: xcgui, discardable.}

proc XDraw_DrawGroupBox_RoundRect*(hDraw: HDRAW; pRect: ptr RECT; pName: ptr WCHAR;
                                  textColor: COLORREF; textAlpha: BYTE;
                                  pOffset: ptr POINT; nWidth: cint; nHeight: cint) {.
    cdecl, importc: "XDraw_DrawGroupBox_RoundRect", dynlib: xcgui, discardable.}

proc XDraw_GradientFill2*(hDraw: HDRAW; color1: COLORREF; alpha1: BYTE;
                         color2: COLORREF; alpha2: BYTE; pRect: ptr RECT; mode: cint) {.
    cdecl, importc: "XDraw_GradientFill2", dynlib: xcgui, discardable.}

proc XDraw_GradientFill4*(hDraw: HDRAW; color1: COLORREF; color2: COLORREF;
                         color3: COLORREF; color4: COLORREF; pRect: ptr RECT;
                         mode: cint): BOOL {.cdecl, importc: "XDraw_GradientFill4",
    dynlib: xcgui, discardable.}

proc XDraw_FrameRgn*(hDraw: HDRAW; hrgn: HRGN; hbr: HBRUSH; nWidth: cint; nHeight: cint): BOOL {.
    cdecl, importc: "XDraw_FrameRgn", dynlib: xcgui, discardable.}

proc XDraw_FrameRect*(hDraw: HDRAW; pRect: ptr RECT) {.cdecl,
    importc: "XDraw_FrameRect", dynlib: xcgui, discardable.}

proc XDraw_FocusRect*(hDraw: HDRAW; pRect: ptr RECT) {.cdecl,
    importc: "XDraw_FocusRect", dynlib: xcgui, discardable.}

proc XDraw_DrawLine*(hDraw: HDRAW; x1: cint; y1: cint; x2: cint; y2: cint) {.cdecl,
    importc: "XDraw_DrawLine", dynlib: xcgui, discardable.}

proc XDraw_MoveToEx*(hDraw: HDRAW; X: cint; Y: cint; lpPoint: LPPOINT = nil): BOOL {.cdecl,
    importc: "XDraw_MoveToEx", dynlib: xcgui, discardable.}

proc XDraw_LineTo*(hDraw: HDRAW; nXEnd: cint; nYEnd: cint): BOOL {.cdecl,
    importc: "XDraw_LineTo", dynlib: xcgui, discardable.}

proc XDraw_Polyline*(hDraw: HDRAW; pArrayPt: ptr POINT; arrayPtSize: cint): BOOL {.cdecl,
    importc: "XDraw_Polyline", dynlib: xcgui, discardable.}

proc XDraw_Dottedline*(hDraw: HDRAW; x1: cint; y1: cint; x2: cint; y2: cint) {.cdecl,
    importc: "XDraw_Dottedline", dynlib: xcgui, discardable.}
## 绘制虚线


proc XDraw_SetPixel*(hDraw: HDRAW; X: cint; Y: cint; crColor: COLORREF): COLORREF {.cdecl,
    importc: "XDraw_SetPixel", dynlib: xcgui, discardable.}

proc XDraw_Check*(hDraw: HDRAW; x: cint; y: cint; color: COLORREF; bCheck: BOOL) {.cdecl,
    importc: "XDraw_Check", dynlib: xcgui, discardable.}

proc XDraw_DrawIconEx*(hDraw: HDRAW; xLeft: cint; yTop: cint; hIcon: HICON;
                      cxWidth: cint; cyWidth: cint; istepIfAniCur: UINT;
                      hbrFlickerFreeDraw: HBRUSH; diFlags: UINT): BOOL {.cdecl,
    importc: "XDraw_DrawIconEx", dynlib: xcgui, discardable.}

proc XDraw_BitBlt*(hDrawDest: HDRAW; nXDest: cint; nYDest: cint; nWidth: cint;
                  nHeight: cint; hdcSrc: HDC; nXSrc: cint; nYSrc: cint; dwRop: DWORD): BOOL {.
    cdecl, importc: "XDraw_BitBlt", dynlib: xcgui, discardable.}

proc XDraw_BitBlt2*(hDrawDest: HDRAW; nXDest: cint; nYDest: cint; nWidth: cint;
                   nHeight: cint; hDrawSrc: HDRAW; nXSrc: cint; nYSrc: cint;
                   dwRop: DWORD): BOOL {.cdecl, importc: "XDraw_BitBlt2",
                                      dynlib: xcgui, discardable.}

proc XDraw_AlphaBlend*(hDraw: HDRAW; nXOriginDest: cint; nYOriginDest: cint;
                      nWidthDest: cint; nHeightDest: cint; hdcSrc: HDC;
                      nXOriginSrc: cint; nYOriginSrc: cint; nWidthSrc: cint;
                      nHeightSrc: cint; alpha: cint): BOOL {.cdecl,
    importc: "XDraw_AlphaBlend", dynlib: xcgui, discardable.}

proc XDraw_TriangularArrow*(hDraw: HDRAW; align: cint; x: cint; y: cint; width: cint;
                           height: cint) {.cdecl, importc: "XDraw_TriangularArrow",
    dynlib: xcgui, discardable.}

proc XDraw_DrawPolygon*(hDraw: HDRAW; points: ptr POINT; nCount: cint) {.cdecl,
    importc: "XDraw_DrawPolygon", dynlib: xcgui, discardable.}

proc XDraw_DrawPolygonF*(hDraw: HDRAW; points: ptr POINTF; nCount: cint) {.cdecl,
    importc: "XDraw_DrawPolygonF", dynlib: xcgui, discardable.}

proc XDraw_FillPolygon*(hDraw: HDRAW; points: ptr POINT; nCount: cint) {.cdecl,
    importc: "XDraw_FillPolygon", dynlib: xcgui, discardable.}

proc XDraw_FillPolygonF*(hDraw: HDRAW; points: ptr POINTF; nCount: cint) {.cdecl,
    importc: "XDraw_FillPolygonF", dynlib: xcgui, discardable.}

proc XDraw_Image*(hDraw: HDRAW; hImageFrame: HIMAGE; x: cint; y: cint) {.cdecl,
    importc: "XDraw_Image", dynlib: xcgui, discardable.}

proc XDraw_Image2*(hDraw: HDRAW; hImageFrame: HIMAGE; x: cint; y: cint; width: cint;
                  height: cint) {.cdecl, importc: "XDraw_Image2", dynlib: xcgui, discardable.}

proc XDraw_ImageStretch*(hDraw: HDRAW; hImageFrame: HIMAGE; x: cint; y: cint;
                        width: cint; height: cint) {.cdecl,
    importc: "XDraw_ImageStretch", dynlib: xcgui, discardable.}

proc XDraw_ImageAdaptive*(hDraw: HDRAW; hImageFrame: HIMAGE; pRect: ptr RECT;
                         bOnlyBorder: BOOL = FALSE) {.cdecl,
    importc: "XDraw_ImageAdaptive", dynlib: xcgui, discardable.}

proc XDraw_ImageExTile*(hDraw: HDRAW; hImageFrame: HIMAGE; pRect: ptr RECT;
                       flag: cint = 0) {.cdecl, importc: "XDraw_ImageExTile",
                                     dynlib: xcgui, discardable.}

proc XDraw_ImageSuper*(hDraw: HDRAW; hImageFrame: HIMAGE; pRect: ptr RECT;
                      bClip: BOOL = FALSE) {.cdecl, importc: "XDraw_ImageSuper",
    dynlib: xcgui, discardable.}

proc XDraw_ImageSuper2*(hDraw: HDRAW; hImageFrame: HIMAGE; pRcDest: ptr RECT;
                       pSrcRect: ptr RECT) {.cdecl, importc: "XDraw_ImageSuper2",
    dynlib: xcgui, discardable.}

proc XDraw_ImageSuperMask*(hDraw: HDRAW; hImageFrame: HIMAGE;
                          hImageFrameMask: HIMAGE; pRect: ptr RECT;
                          pRectMask: ptr RECT; bClip: BOOL = FALSE) {.cdecl,
    importc: "XDraw_ImageSuperMask", dynlib: xcgui, discardable.}

proc XDraw_ImageMask*(hDraw: HDRAW; hImageFrame: HIMAGE; hImageFrameMask: HIMAGE;
                     x: cint; y: cint; x2: cint; y2: cint) {.cdecl,
    importc: "XDraw_ImageMask", dynlib: xcgui, discardable.}

proc XDraw_DrawText*(hDraw: HDRAW; lpString: ptr WCHAR; nCount: cint; lpRect: ptr RECT) {.
    cdecl, importc: "XDraw_DrawText", dynlib: xcgui, discardable.}

proc XDraw_DrawTextUnderline*(hDraw: HDRAW; lpString: ptr WCHAR; nCount: cint;
                             lpRect: ptr RECT; colorLine: COLORREF;
                             alphaLine: BYTE = 255) {.cdecl,
    importc: "XDraw_DrawTextUnderline", dynlib: xcgui, discardable.}

proc XDraw_TextOut*(hDraw: HDRAW; nXStart: cint; nYStart: cint; lpString: ptr WCHAR;
                   cbString: cint) {.cdecl, importc: "XDraw_TextOut", dynlib: xcgui, discardable.}

proc XDraw_TextOutEx*(hDraw: HDRAW; nXStart: cint; nYStart: cint; lpString: ptr WCHAR) {.
    cdecl, importc: "XDraw_TextOutEx", dynlib: xcgui, discardable.}

proc XDraw_TextOutA*(hDraw: HDRAW; nXStart: cint; nYStart: cint; lpString: cstring) {.
    cdecl, importc: "XDraw_TextOutA", dynlib: xcgui, discardable.}

proc XDraw_SetAlpha*(hDraw: HDRAW; alpha: BYTE) {.cdecl, importc: "XDraw_SetAlpha",
    dynlib: xcgui, discardable.}
## 设置透明通道度


proc XDraw_SetAlphaEx*(hdc: HDC; alpha: BYTE) {.cdecl, importc: "XDraw_SetAlphaEx",
    dynlib: xcgui, discardable.}
## 设置透明通道度


proc XEditor_Create*(x: cint; y: cint; cx: cint; cy: cint; hParent: HXCGUI = nil): HELE {.
    cdecl, importc: "XEditor_Create", dynlib: xcgui, discardable.}

proc XEditor_SetBreakpoint*(hEle: HELE; iPosition: cint; bActivate: BOOL = TRUE): BOOL {.
    cdecl, importc: "XEditor_SetBreakpoint", dynlib: xcgui, discardable.}
## 添加断点


proc XEditor_RemoveBreakpoint*(hEle: HELE; iPosition: cint): BOOL {.cdecl,
    importc: "XEditor_RemoveBreakpoint", dynlib: xcgui, discardable.}
## 添加断点


proc XEditor_ClearBreakpoint*(hEle: HELE) {.cdecl,
    importc: "XEditor_ClearBreakpoint", dynlib: xcgui, discardable.}

proc XEditor_SetActivateBreakpoint*(hEle: HELE; iPosition: cint; bActivate: BOOL): BOOL {.
    cdecl, importc: "XEditor_SetActivateBreakpoint", dynlib: xcgui, discardable.}
## 设置当前命中行


proc XEditor_SetRunRow*(hEle: HELE; iPosition: cint): BOOL {.cdecl,
    importc: "XEditor_SetRunRow", dynlib: xcgui, discardable.}

proc XEditor_GetBreakpointCount*(hEle: HELE): cint {.cdecl,
    importc: "XEditor_GetBreakpointCount", dynlib: xcgui, discardable.}

proc XEditor_GetBreakpoints*(hEle: HELE; aPoints: ptr cint; nCount: cint): cint {.cdecl,
    importc: "XEditor_GetBreakpoints", dynlib: xcgui, discardable.}

proc XEdit_Create*(x: cint; y: cint; cx: cint; cy: cint; hParent: HXCGUI = nil): HELE {.cdecl,
    importc: "XEdit_Create", dynlib: xcgui, discardable.}

proc XEdit_SetText*(hEle: HELE; pString: ptr WCHAR) {.cdecl,
    importc: "XEdit_SetText", dynlib: xcgui, discardable.}

proc XEdit_GetText*(hEle: HELE; pOut: ptr WCHAR; nOutlen: cint): cint {.cdecl,
    importc: "XEdit_GetText", dynlib: xcgui, discardable.}

proc XEdit_GetTextLength*(hEle: HELE): cint {.cdecl, importc: "XEdit_GetTextLength",
    dynlib: xcgui, discardable.}

proc XEdit_SetCaretColor*(hEle: HELE; color: COLORREF) {.cdecl,
    importc: "XEdit_SetCaretColor", dynlib: xcgui, discardable.}

proc XEdit_SetSelectBkColor*(hEle: HELE; color: COLORREF; alpha: BYTE = 255) {.cdecl,
    importc: "XEdit_SetSelectBkColor", dynlib: xcgui, discardable.}

proc XEdit_AddKeyword*(hEle: HELE; pKeyword: ptr WCHAR; color: COLORREF) {.cdecl,
    importc: "XEdit_AddKeyword", dynlib: xcgui, discardable.}

proc XEdit_ClipboardPaste*(hEle: HELE): BOOL {.cdecl,
    importc: "XEdit_ClipboardPaste", dynlib: xcgui, discardable.}
## 粘贴 粘贴剪贴板内容

